<resources>
    <string name="app_name">Выигрышная стратегия</string>
    <string name="_19">Задание №19</string>
    <string name="_20">Задание №20</string>
    <string name="_21">Задание №21</string>
    <string name="ComplexSolution">Комплексное решение</string>
    <string name="NumberOfHeaps">Количество куч в задаче: 1</string>
    <string name="Move">Ход\nпервого игрока:</string>
    <string name="AnyMove">Любой</string>
    <string name="UnluckyMove">Неудачный</string>
    <string name="NumberOfKoefs">Количество\nопераций с камнями:</string>
    <string name="_2Koef">2</string>
    <string name="_3Koef">3</string>
    <string name="EnterKoef">Введите число коэффициента</string>
    <string name="Result">Результат:</string>
    <string name="ResultButton">Показать результат</string>
    <string name="Winning">Введите число выигрыша</string>
    <string name="ChooseAction">Выберите вид операции\nс камнями:</string>
    <string name="BeginFromStart">Начать сначала</string>
    <string name="CannotRepeatTheMove">Нельзя\nповторять ход?</string>
    <string name="Yes">Можно</string>
    <string name="No">Нельзя</string>
    <string name="PossibleValuesOfS">Возможные значения S:</string>
    <string name="MyLastOne">Свой\nпредыдущий</string>
    <string name="AnotherPlayer">Другого\nигрока</string>
    <string name="Error">Ошибка: неверный ввод данных</string>
    <string name="NumberOfAddedStones">Введите количество добавляемых камней</string>
    <string name="KoefOfMultStones">Введите коэффициент умножения</string>
    <string name="info">info</string>
    <string name="instruction">Инструкция</string>
    <string name="text_of_instruction">Данное приложение было разработано для решения 19, 20 и 21 задач из ЕГЭ по информатике. На данный момент «Выигрышная стратегия» умеет решать исключительно задачи с одной кучей. Выбор варианта с двумя кучами уже в процессе разработки. При выборе любой задачи (19, 20, 21 или комплексное решение) вы будете перенесены на экран заполнения данных. В нем нужно указать какой именно ход у первого игрока (неудачный или любой), данное условие прописывается в конце задачи. Выбрать количество операций с камнями (например, добавить 1 камень или увеличить число камней в 2 раза – это 2 операции, а добавить 1 камень или добавить 2 камня или увеличить число камней в 2 раза – это уже три операции). В зависимости от выбора количества операций будут предложены разные варианты развития событий. После чего указываются дополнительные данные для более точного определения задачи и вводятся числа, согласно подсказкам (Вводится исключительно число, какие-либо другие символы не будут восприняты)\n\nПри выборе 3 операций будет отображено поле с выбором есть ли запрет хода. Запрет на чей-либо ход указывается в условии задачи, если его нет, то ход повторять можно. Пример выполнения задачи:</string>
    <string name="example_of_the_task">Два игрока, Петя и Ваня, играют в следующую игру. Перед игроками лежит куча камней. Игроки ходят по очереди, первый ход делает Петя. За один ход игрок может <b>добавить в кучу один или четыре камня либо увеличить количество камней в куче в пять раз</b>. Например, имея кучу из 15 камней, за один ход можно получить кучу из 16, 19 или 75 камней. У каждого игрока, чтобы делать ходы, есть неограниченное количество камней. Игра завершается в тот момент, когда количество камней в куче становится не менее 63. Победителем считается игрок, сделавший последний ход, т.е. первым получивший кучу, <b>в которой будет 63 или больше камней</b>. В начальный момент в куче было S камней; 1 ≤ S ≤ 62. Будем говорить, что игрок имеет выигрышную стратегию, если он может выиграть при любых ходах противника. Описать стратегию игрока— значит, описать, какой ход он должен сделать в любой ситуации, которая ему может встретиться при различной игре противника. В описание выигрышной стратегии не следует включать ходы играющего по этой стратегии игрока, не являющиеся для него безусловно выигрышными, т.е. не являющиеся выигрышными независимо от игры противника. Известно, что Ваня выиграл своим первым ходом после <b>неудачного</b> первого хода Пети. Укажите минимальное значение S, когда такая ситуация возможна.</string>
    <string name="EnterDataTheSameWay">Таким образом мы заполняем данные следующим образом:</string>
    <string name="result_3">И, после нажатия кнопки «показать результат», мы видим ответ – 3.</string>
    <string name="return_to_the_main_screen">Вернуться на главный экран</string>
    <string name="enter_the_key">Введите ключ активации</string>
    <string name="send_key">Запросить ключ у модератора</string>
    <string name="commit_sending">Подтвердить ввод</string>
    <string name="error_key">Ключ не подходит</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">BkNirUBx8tB1xUQhBtWcTrSVKLqiMryRUWjQFSnk</string>
    <string name="back4app_client_key">B2353Vz7Ku6YMOnKXraYOMQ3xGYa5i60hn7W46CA</string>
</resources>