<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/other_activities_background"
    tools:context=".Task19Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/text_tasks_and_buttons"
        android:text="@string/_19"
        android:textSize="17sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@drawable/rectangle" />

    <TextView
        android:id="@+id/countOfHeaps1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/text_tasks_and_buttons"
        android:text="@string/NumberOfHeaps"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layoutMove"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textColor="@color/text_tasks_and_buttons"
            android:text="@string/Move"/>

        <Button
            android:id="@+id/anyMove"
            android:background="@drawable/button_tasks"
            android:textColor="@color/text_tasks_and_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/AnyMove" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <Button
            android:id="@+id/unluckyMove"
            android:background="@drawable/button_tasks"
            android:textColor="@color/text_tasks_and_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/UnluckyMove" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCountOfKoef"
        android:layout_width="match_parent"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/text_tasks_and_buttons"
            android:layout_marginStart="2dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/NumberOfKoefs"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/koef2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_tasks"
            android:textColor="@color/text_tasks_and_buttons"
            android:text="@string/_2Koef" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <Button
            android:id="@+id/koef3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_tasks"
            android:textColor="@color/text_tasks_and_buttons"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/_3Koef" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBranch3Koef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:textColor="@color/text_tasks_and_buttons"
            android:text="@string/CannotRepeatTheMove"/>

        <Button
            android:id="@+id/yesButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_tasks"
            android:text="@string/Yes"
            android:textColor="@color/text_tasks_and_buttons"
            android:textSize="13sp" />

        <Button
            android:id="@+id/noButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_tasks"
            android:text="@string/No"
            android:textColor="@color/text_tasks_and_buttons"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/whichMove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/myMove"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_tasks"
            android:text="@string/MyLastOne"
            android:textColor="@color/text_tasks_and_buttons"
            android:textSize="12sp" />

        <Button
            android:id="@+id/anotherPlayer"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_tasks"
            android:text="@string/AnotherPlayer"
            android:textColor="@color/text_tasks_and_buttons"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/chooseAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/ChooseAction"
        android:textColor="@color/text_tasks_and_buttons"
        android:visibility="gone"
        android:textSize="16sp" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_weight="0"
        android:background="@drawable/rectangle"
        android:foregroundGravity="top"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:background="@android:color/transparent"
        android:divider="@color/button_main_activity"
        android:dividerHeight="0.5dp"
        android:focusable="true"
        android:choiceMode="singleChoice"
        android:visibility="gone" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_weight="0"
        android:background="@drawable/rectangle"
        android:foregroundGravity="top"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:visibility="gone"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NumberOfAddedStones"
        android:inputType="number"
        android:textColor="@color/text_tasks_and_buttons"
        android:textColorHint="@color/text_of_hints"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:visibility="gone"
        android:padding="12dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NumberOfAddedStones"
        android:inputType="number"
        android:textColor="@color/text_tasks_and_buttons"
        android:textColorHint="@color/text_of_hints"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText3"
        android:visibility="gone"
        android:padding="12dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/KoefOfMultStones"
        android:inputType="number"
        android:textColor="@color/text_tasks_and_buttons"
        android:textColorHint="@color/text_of_hints"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText4"
        android:visibility="gone"
        android:padding="12dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Winning"
        android:inputType="number"
        android:textColor="@color/text_tasks_and_buttons"
        android:textColorHint="@color/text_of_hints"
        android:textSize="16sp"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/answerLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/PossibleValuesOfS"
            android:textColor="@color/text_tasks_and_buttons"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/text_tasks_and_buttons"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/resultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/button_tasks"
        android:textColor="@color/text_tasks_and_buttons"
        android:text="@string/ResultButton" />

    <Button
        android:id="@+id/beginFromStart"
        android:layout_width="match_parent"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/button_tasks"
        android:textColor="@color/text_tasks_and_buttons"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="@string/BeginFromStart" />

</LinearLayout>