<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/main_activity_background"
    android:orientation="vertical">

    <Button
        android:id="@+id/info"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_main_activity"
        android:text="@string/info"
        android:textColor="@color/text_of_main_activity" />

    <Space
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.75"/>

    <Button
        android:id="@+id/button19"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_main_activity"
        android:text="@string/_19"
        android:textColor="@color/text_of_main_activity" />

    <Space
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.09"/>

    <Button
        android:id="@+id/button20"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/text_of_main_activity"
        android:background="@drawable/button_main_activity"
        style="?android:attr/borderlessButtonStyle"
        android:layout_gravity="center"/>

    <Space
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.09"/>

    <Button
        android:id="@+id/button21"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_main_activity"
        android:text="@string/_21"
        android:textColor="@color/text_of_main_activity" />

    <Space
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.09"/>

    <Button
        android:id="@+id/buttonComplex"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:text="@string/ComplexSolution"
        android:textColor="@color/text_of_main_activity"
        android:background="@drawable/button_main_activity"
        style="?android:attr/borderlessButtonStyle"
        android:layout_gravity="center" />

    <Space
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>


</LinearLayout>