<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/other_activities_background"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/text_tasks_and_buttons"
                android:text="@string/instruction"
                android:textSize="23sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:background="@drawable/rectangle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/text_of_instruction"
                android:textColor="@color/text_tasks_and_buttons"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/example_of_the_task"
                android:textColor="@color/text_tasks_and_buttons"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/EnterDataTheSameWay"
                android:textColor="@color/text_tasks_and_buttons"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="792dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/photo_edited_task_in_app"
                app:srcCompat="@drawable/filled_data_in_app" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/result_3"
                android:textColor="@color/text_tasks_and_buttons"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="792dp"
                android:contentDescription="@string/photo_of_result_in_app"
                app:srcCompat="@drawable/result_in_app" />

            <Button
                android:id="@+id/returnToMainScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button_tasks"
                android:textColor="@color/text_tasks_and_buttons"
                android:text="@string/return_to_the_main_screen" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>